<resources>
    <string name="app_name">ShowCity</string>
    <!--Login-->
    <string name="hint_login_username">User Name</string>
    <string name="hint_login_password">Password</string>
    <string name="text_button_login_sign_in">Sign in</string>
    <string name="text_button_login_sign_up">Sign up</string>
    <string name="label_login_help">Help</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_container_news">ContainerNewsActivity</string>
    <string name="image_transition_name">ImageTransition</string>
    <string name="title_activity_help">HelpActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
